<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Playlist Maker</string>
    <string name="app_name_display">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="search2">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="night">Темная тема</string>
    <string name="share">Поделится приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="contract">Пользовательское соглашение</string>
    <string name="textShare">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="textSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail">nikornyakov@gmail.com</string>
    <string name="agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_name">Whole Lotta Love</string>
    <string name="track_time">5:33</string>
    <string name="artist_name">Led Zeppelin</string>

    <string name="trackName1"> Smells Like Teen Spirit</string>
    <string name="artistName1"> Nirvana</string>
    <string name="trackTime1"> 5:01</string>
    <string name="artworkUrl1" tools:ignore="TypographyDashes">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>

    <string name="trackName2"> Billie Jean</string>
    <string name="artistName2"> Michael Jackson</string>
    <string name="trackTime2"> 4:35</string>
    <string name="artworkUrl2" tools:ignore="TypographyDashes">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>

    <string name="trackName3"> Stayin\' Alive</string>
    <string name="artistName3"> Bee Gees</string>
    <string name="trackTime3"> 4:10</string>
    <string name="artworkUrl3" tools:ignore="TypographyDashes">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>

    <string name="trackName4"> Whole Lotta Love</string>
    <string name="artistName4"> Led Zeppelin</string>
    <string name="trackTime4"> 5:33</string>
    <string name="artworkUrl4" tools:ignore="TypographyDashes">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>

    <string name="trackName5"> Sweet Child O\'Mine</string>
    <string name="artistName5"> Guns N\' Roses</string>
    <string name="trackTime5"> 5:03</string>
    <string name="artworkUrl5" tools:ignore="TypographyDashes">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>


</resources>