<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/SCREEN2"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:gravity="top"
        android:text="@string/settings_title"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="22sp"
        android:textStyle="normal"
        style="@style/SettingsStyle"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>

    <ImageButton
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/arrow_black"
        app:srcCompat="@drawable/arrow_back"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="14dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switcher"
            android:layout_width="match_parent"
            android:text="@string/night"
            style="@style/SettingsStyle"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:text="@string/share"
            app:drawableRightCompat="@drawable/share"
            app:drawableTint="@color/icon_black"
            style="@style/SettingsStyle"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:text="@string/write"
            app:drawableRightCompat="@drawable/support2"
            app:drawableTint="@color/icon_black"
            style="@style/SettingsStyle"/>

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:text="@string/contract"
            app:drawableRightCompat="@drawable/arrow_forward"
            app:drawableTint="@color/icon_black"
            style="@style/SettingsStyle"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
